cors for multiple url